<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_contact_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/form_full_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/activity_contact_form_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/form_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/activity_contact_form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/form_email_address"
            android:inputType="textEmailAddress" />
    </LinearLayout>
</ScrollView>
