<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activity.AboutActivity">

        <TextView
            android:id="@+id/activity_about_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:padding="12dp"
            android:text="@string/layout_about_intro"
            android:textSize="16sp"
            app:lineHeight="30sp" />

        <TextView
            android:id="@+id/activity_about_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:padding="12dp"
            android:text="@string/layout_about_links"
            android:textSize="16sp"
            app:lineHeight="30sp" />

        <TextView
            android:id="@+id/activity_about_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:padding="12dp"
            android:text="@string/layout_about_signature"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
